fix: fix contrast issues for header section

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
 :root {
     --background-white: #ffffff;
     --box-shadow: 0 1px 6px rgb(32 33 36 / 28%);
-    --color-blue: #2783ff;
+    --color-blue: #0052bd;
     --default-radius: 10px;
     --font-large: 2rem;
     --font-normal: 1.5rem;
